--- a/docker/skins/Wiki7/resources/skins.wiki7.styles/tokens-codex.less
+++ b/docker/skins/Wiki7/resources/skins.wiki7.styles/tokens-codex.less
@@ -73,6 +73,8 @@
 	--background-color-backdrop-dark: ~'rgba( 0, 0, 0, var( --backdrop-opacity ) )';
 	--background-color-button-quiet--hover: rgba(253, 220, 220, 0.9);
 	--background-color-button-quiet--active: rgba(255, 241, 241, 0.95);
+	--background-color-button-quiet-menu--hover: rgba(253, 220, 220, 0.9);
+	--background-color-button-quiet-menu--active: rgba(255, 241, 241, 0.95);
 	--background-color-input-binary--checked: var( --color-progressive );
 	--background-color-tab-list-item-framed--hover: rgba( 255, 255, 255, 0.3 );
 	--background-color-tab-list-item-framed--active: rgba( 255, 255, 255, 0.65 );
